--- a/salarios.html
+++ b/salarios.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  
     <title>Document</title>
 </head>
 <body>
+    <h1>analisis salarial</h1>
+    <div class="container">
+        <div class="row">
+
+            <div class="col-12">                
+                <label class=" m-3" for="pantallaTodasPersonas">personas: </label>
+                <textarea name="" id="pantallaTodasPersonas" cols="20" rows="10"></textarea>                
+            </div>
+
+            <div class="col-12">
+                <label class=" m-3" for="nombre">Ingrese nombre </label>
+                <input class=" m-3" id="nombre" type="text" >
+            </div>
+            <button class="btn btn-dark" id="btnCalcularMediana" >calcular mediana salarial</button>
+            <h3 id="resultMediana" ></h3>
+
+
+        </div>
+    </div>
     
     <script src="platzimath.js"></script>
     <script src="salarios.js" ></script>
     <script src="analisis.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> 
 </body>
 </html>
