--- a/salarios.html
+++ b/salarios.html
@@ -22,8 +22,10 @@
                 <label class=" m-3" for="nombre">Ingrese nombre </label>
                 <input class=" m-3" id="nombre" type="text" >
             </div>
-            <button class="btn btn-dark" id="btnCalcularMediana" >calcular mediana salarial</button>
+            <button class="btn btn-dark m-1" id="btnCalcularMediana" >calcular mediana salarial</button>
+            <button class="btn btn-dark m-1" id="btnCalcularProyeccion" >calcular proyeccion salarial</button>
             <h3 id="resultMediana" ></h3>
+            <h3 id="resultProyeccion" ></h3>
 
 
         </div>
