--- a/salarios.html
+++ b/salarios.html
@@ -29,6 +29,28 @@
 
 
         </div>
+        <div class="row">
+
+            <div class="col-12">                
+                <label class=" m-3" for="pantallaTodasEmpresas">empresas: </label>
+                <textarea name="" id="pantallaTodasEmpresas" cols="20" rows="10"></textarea>                
+            </div>
+
+            <div class="col-12">
+                <label class=" m-3" for="nombreEmpresa">Ingrese nombre </label>
+                <input class=" m-3" id="nombreEmpresa" type="text" >
+            </div>
+            <div class="col-12">
+                <label class=" m-3" for="yearEmpresa">Ingrese año </label>
+                <input class=" m-3" id="yearEmpresa" type="text" >
+            </div>
+            <button class="btn btn-dark m-1" id="btnMedianaEmpresa" >calcular mediana salarial</button>
+            <button class="btn btn-dark m-1" id="btnProyeccionEmpresa" >calcular proyeccion salarial</button>
+            <h3 id="resultMedianaEmpresa" ></h3>
+            <h3 id="resultProyeccionEmpresa" ></h3>
+
+
+        </div>
     </div>
     
     <script src="platzimath.js"></script>
