calculo de la proyeccion de pagos de sueldo para una empresa especifica

--- a/salarios.html
+++ b/salarios.html
@@ -15,7 +15,7 @@
 
             <div class="col-12">                
                 <label class=" m-3" for="pantallaTodasPersonas">personas: </label>
-                <textarea name="" id="pantallaTodasPersonas" cols="20" rows="10"></textarea>                
+                <textarea disabled name="" id="pantallaTodasPersonas" cols="20" rows="10"></textarea>                
             </div>
 
             <div class="col-12">
@@ -33,7 +33,7 @@
 
             <div class="col-12">                
                 <label class=" m-3" for="pantallaTodasEmpresas">empresas: </label>
-                <textarea name="" id="pantallaTodasEmpresas" cols="20" rows="10"></textarea>                
+                <textarea disabled name="" id="pantallaTodasEmpresas" cols="20" rows="10"></textarea>                
             </div>
 
             <div class="col-12">
